--- a/index.html
+++ b/index.html
@@ -6,16 +6,38 @@
 </head>
 <body>
     <h1>Portfólio</h1>
-    <h3>Gabriela Nascimento Muniz</h3>
-    <img src="minha foto.jpeg" alt="foto da gabriela" width="100px">
-<p>Nacionalidade: brasileira <br> 
-Cidade/Estado: Vitória-ES <br>
-Idade: 19 anos
+    <hr>
+    <a href="#foto">Foto</a> <br>
+    <a href="#habilidades">Habilidades</a> <br>
+    <a href="#habilidades comp">Habilidades Comportamentais</a> <br>
+    <a href="https://www.linkedin.com/in/gabriela-muniz-819609247/" target="_blank">Linkedin</a>
+    <hr>
+   
+   
+    <h2>Gabriela Nascimento Muniz</h2>
+    <img id="foto" src="minha foto.jpeg" alt="foto da gabriela" width="200px">
+<p><strong>Estudande de software developer na Trybe</strong>  <br><br> nacionalidade: brasileira <br> Cidade/Estado: Vitória - es <br> Idade: 19 anos</p>
+
+<hr>
+    
 </p>
- <h4>Habilidades:</h4>
+ <h3 id="habilidades">Habilidades:</h3>
 <ul>
-    <li>Inglês</li>
-    <li>Modelagem 3D</li>
+    <li>Inglês;</li> <br>
+    <li>Modelagem 3D;</li> <br>
+    <li>Illustrator.</li> 
+  
+    
 </ul>
+
+<h3 id="habilidades comp">Habilidades Comportamentais:</h3>
+<ul>
+    <li>criatividade;</li> <br>
+    <li>flexibilidade e capacidade de se adaptar a mudanças; </li> <br>
+    <li>aprendizado contínuo;</li> <br>
+    <li>comprometimento.</li>
+</ul>
+
+
 </body>
 </html>
