--- a/index.html
+++ b/index.html
@@ -8,52 +8,57 @@
 </head>
 
 <body>
+    <header>
+        <h1>Portfólio</h1>
+        <nav class="container">
+            <a href="#foto">Foto</a> <br>
+            <a href="#habilidades">Habilidades</a> <br>
+            <a href="#habilidades_comp">Habilidades Comportamentais</a> <br>
+            <a href="https://www.linkedin.com/in/gabriela-muniz-819609247/" target="_blank">Linkedin</a>
+        </nav>
+    </header>
+    <main>
+        <section class="sobre_mim">
+            <h2><strong>Gabriela Nascimento Muniz</strong></h2>
 
-    <h1>Portfólio</h1>
+            <div class="container">
+                <img id="foto" width=200px src="minha foto.jpeg" alt="foto da gabriela">
 
-    <nav class="container">
-        <a href="#foto">Foto</a> <br>
-        <a href="#habilidades">Habilidades</a> <br>
-        <a href="#habilidades comp">Habilidades Comportamentais</a> <br>
-        <a href="https://www.linkedin.com/in/gabriela-muniz-819609247/" target="_blank">Linkedin</a>
-    </nav>
+                <p><strong>Estudande de software developer na Trybe</strong> <br><br> Nacionalidade: brasileira <br>
+                    Cidade/Estado:
+                    Vitória - es <br> Idade: 19 anos</p>
+            </div>
+        </section>
 
+        <hr>
 
-    <section class="sobre_mim">
-        <h2><strong>Gabriela Nascimento Muniz</strong></h2>
-
-        <div class="container">
-            <img id="foto" width=200px src="minha foto.jpeg" alt="foto da gabriela">
-
-            <p><strong>Estudande de software developer na Trybe</strong> <br><br> Nacionalidade: brasileira <br>
-                Cidade/Estado:
-                Vitória - es <br> Idade: 19 anos</p>
-        </div>
-    </section>
-
-    <hr>
-    </p>
-    <section class="lista-geral">
-        <h3 class="habilidades" id="habilidades">Habilidades:</h3>
-        <div class="lista">
-            <ul>
-                <li>Inglês;</li> <br>
-                <li>Modelagem 3D;</li> <br>
-                <li>Illustrator.</li>
-            </ul>
-        </div>
-
-
-        <h3 class="habilidades" id="habilidades comp">Habilidades Comportamentais:</h3>
-        <div class="lista2">
-            <ul>
-                <li>criatividade;</li> <br>
-                <li>flexibilidade e capacidade de se adaptar a mudanças; </li> <br>
-                <li>aprendizado contínuo;</li> <br>
-                <li>comprometimento.</li>
-            </ul>
-        </div>
-    </section>
+        <section class="lista-geral container-habilidades">
+            <div class="bloco-h1">
+                <h3 class="habilidades" id="habilidades">Habilidades:</h3>
+                <div class="lista">
+                    <ul>
+                        <li>Inglês;</li> <br>
+                        <li>Modelagem 3D;</li> <br>
+                        <li>Illustrator.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="bloco-h">
+                <h3 class="habilidades" id="habilidades_comp">Habilidades Comportamentais:</h3>
+                <div class="lista2">
+                    <ul>
+                        <li>criatividade;</li> <br>
+                        <li>flexibilidade e capacidade de se adaptar a mudanças; </li> <br>
+                        <li>aprendizado contínuo;</li> <br>
+                        <li>comprometimento.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <h4>2022 - Gabriela Muniz</h3>
+    </footer>
 </body>
 
 </html>
